--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "knex": "^0.16.3",
+    "server": "^1.0.18",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
